# qontinui-web

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ASYNC_MIGRATION_COMPLETE.md  AUTOMATION_SESSION_LIFECYCLE_ANALYSIS.md  CLAUDE.md  CLOUDFRONT_SETUP.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION_ANALYSIS.md  CONFLICT_MANIFEST.json  CONFLICT_RESOLUTION_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT_IMPROVEMENTS.md  DEPLOYMENT_ROADMAP_COMPLETE.md  ENDPOINT_MERGE_SUMMARY.md  HTTPONLY_COOKIE_MIGRATION.md  IMAGE_PROCESSING_IMPROVEMENTS_IMPLEMENTED.md  IMAGE_PROCESSING_PIPELINE_ANALYSIS.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_MAPPING.md  LIBRARY_IMPLEMENTATION_COMPLETE.md  LIBRARY_RESEARCH_SUMMARY.md  LICENSE  MIGRATION_COMPARISON_REPORT.md  OFFLINE_FIRST_IMPLEMENTATION_GUIDE.md  OFFLINE_FIRST_INTEGRATION_COMPLETE.md  OFFLINE_FIRST_INTEGRATION_PLAN.md  OFFLINE_FIRST_SUMMARY.md  ORGANIZATION_SWITCHER_INTEGRATION.md  PHASE1_COMPLETE.md  PHASE1_TESTING_GUIDE.md  PHASE_2_COMPLETE.md  PRIORITY_1_IMPLEMENTATION_SUMMARY.md  PROJECT_SHARING_IMPLEMENTATION.md  README.md  SCREENSHOT_ARCHITECTURE_IMPROVEMENTS.md  (+16 more)
backend/: .dockerignore  .ebignore  .env.example  .env.staging  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  ANALYSIS_SETUP.md  ANNOTATIONS_SETUP.md  AUDIT_LOGGING_IMPLEMENTATION.md  AUDIT_LOGGING_QUICK_REFERENCE.md  AUDIT_LOGGING_SUMMARY.md  AUTONOMOUS_EVALUATION.md  CLEANUP_TASKS_DOCUMENTATION.md  COLLABORATION_INFRASTRUCTURE.md  COLLABORATION_QUICKSTART.md  COLLABORATION_SUMMARY.txt  COST_SAVING_FEATURES_IMPLEMENTATION.md  DATABASE_POOL_OPTIMIZATION.md  DISTRIBUTED_LOCKS_QUICK_REFERENCE.md  Dockerfile  Dockerrun.aws.json  FIX_MIGRATION_TREE.md  IMPLEMENTATION_SUMMARY.md  LOCK_IMPROVEMENTS_REPORT.md  METRICS_INTEGRATION_GUIDE.md  MIGRATION_ANALYSIS.md  MIGRATION_WORKFLOW_GUIDE.md  N+1_QUERY_FIXES.md  PARTITION_IMPLEMENTATION_SUMMARY.md  PARTITION_MANAGEMENT_GUIDE.md  PARTITION_QUICK_REFERENCE.md  PRODUCTION_MIGRATION_PLAN.md  PRODUCTION_MIGRATION_QUICKSTART.md  README.md  RUNNER_TOKEN_IMPLEMENTATION.md  SCREENSHOT_TABLE_CONSOLIDATION_PLAN.md  SECURITY_FLEET_SCOPING_LEAK.md  TESTING_GUIDE.md  (+57 more)
backend/.ebextensions/: 01_packages.config  01_run_migrations.config  02_env.config  03_redis.config  04_docker_env.config  05_cloudwatch_logs.config  healthcheck.config  https-listener.config
backend/alembic/: env.py
backend/app/: celery_app.py  extensions.py  main.py
backend/app/db/: base.py  (+5 more)
backend/backup_migrations/: 08e4e8448e57_add_organization_id_to_projects.py  3dc9c2bf5574_add_automation_streaming_fields.py  4a8b9c6d5e7f_add_performance_indexes.py  4e5f6a7b8c9d_add_automation_videos_table.py  63e5da6dd826_merge_migration_branches.py  67c33a12bedb_add_automation_tables_and_input_events.py  6a54cc0f9180_add_session_activity_table.py  7b3c9d1e2f4a_add_device_sessions_table.py  8d5f2a3c1b9e_add_analytics_tracking.py  93687f70383c_add_device_verification_and_geolocation.py  9d66b0c555d3_fix_subscription_user_id_type.py  a1b2c3d4e5f6_add_recording_tables.py  b1c2d3e4f5g6_populate_project_organization_ids.py  create_collaboration_tables.py  d42d46b1738d_add_annotation_tables.py  d703626068d7_merge_migrations.py  e1f2g3h4i5j6_merge_automation_and_recording.py  e45f9b2c3d1a_add_snapshot_tables_for_integration_testing.py  f9593625b747_add_automation_tables.py  z9fc6936875_add_organization_and_team_management.py
backend/data/: .gitignore  README.md
backend/docs/: ADDING_REDIS_ELASTICACHE.md  API_VERSIONING_GUIDE.md  AUTOMATION_QUICK_START.md  AUTOMATION_STREAMING_CONTROL.md  AUTOMATION_STREAMING_IMPLEMENTATION.md  AUTOMATION_WEBSOCKET_IMPLEMENTATION_SUMMARY.md  AWS_ELASTICACHE_SETUP.md  AWS_RDS_BACKUP_GUIDE.md  BACKGROUND_TASKS.md  DATABASE_MIGRATION_GUIDE.md  ELASTIC_BEANSTALK_REDIS_SETUP.md  ENABLE_MULTI_CONTAINER.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION_MERGE_SUMMARY.md  REDIS_DECISION_GUIDE.md  REDIS_ON_EC2_SETUP.md  STATE_DISCOVERY_PLAN.md  UNIFY_STATE_DISCOVERY_SCHEMA.md  WEBSOCKET_COSTS_AND_CONTROL.md  automation-api-endpoints.md  automation-api-quick-reference.md  background_removal_api.md  input-association-implementation-summary.md  input-association-integration-patch.md  input-association-service.md  json-export-fix-summary.md  organization_migration_summary.md  project-api-organization-integration.md  screenshot-storage.md  state-discovery-api-implementation.md  state-discovery-api.md  state-discovery-service-architecture.md  unified-state-discovery-merge.md  video-upload-implementation.md  websocket-monitoring-endpoint.md  workflow_export_fix_summary.md  workflow_schema_reference.md
backend/migrations/: 001_transition_workflow_ref_migration.py  README.md
backend/ml/: README.md  __init__.py  config.yaml  config_yolo.yaml  data.yaml.example  inference.py  ml_button_analyzer.py  requirements.txt  train_button_detector.py  utils.py
backend/scripts/: backfill_github_identities.py  export_and_migrate_data.py  export_openapi.py  export_test_coverage.py  generate_secrets.py  migrate_files_to_object_storage.py  migrate_to_structlog.py  migrate_users_to_uuid.py  setup-elasticache.sh  spec_ci_local_idp.py
backend/test-ddl-files/: demo.sql
backend/tests/: README.md  TEST_FILE_EXECUTION_SUMMARY.md  conftest.py  manual_test_security.sh  test_active_tenant_transport.py  test_admin_dev_gates_sweep.py  test_admin_dev_overview_swr.py  test_agent_sessions_coord_proxy.py  test_agent_sessions_endpoints.py  test_automated_state_discovery_service.py  test_backfill_github_identities.py  test_cleanup_tasks.py  test_co_pilot_preference_schema.py  test_code_security.py  test_cognito_admin_groups.py  test_cognito_dual_accept.py  test_computer_vision_service.py  test_constraints.py  test_coord_device_reads.py  test_coord_identity.py  test_coord_notifications.py  test_coord_operator_resolver.py  test_coord_proxy_retry.py  test_coord_read_boundary_revoke.py  test_coord_schema_boundary_guard.py  test_coord_session_substrate_migration.py  test_coord_tenant_admin.py  test_deficiency_service.py  (+81 more)
(+5817 files in other folders)
