[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for qontinui-web"
authors = ["Joshua Spinak <jspinak@hotmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.2"
sqlalchemy = "^2.0.43"
uvicorn = "^0.36.0"
pydantic = "^2.11.9"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"
python-multipart = ">=0.0.9"
pydantic-settings = "^2.10.1"
email-validator = ">=1.1.0,<2.3"
slowapi = "^0.1.9"
aiosmtplib = "^4.0.2"
pillow = "^11.3.0"
numpy = "^2.3.3"
opencv-python = "^4.10.0"
reportlab = "^4.0.0"
stripe = "^13.0.1"
alembic = "^1.16.5"
structlog = "^25.4.0"
python-json-logger = "^3.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
redis = "^5.0.0"
aioredis = "^2.0.1"
asyncpg = "^0.30.0"
arq = "^0.26.1"
psycopg2-binary = "^2.9.11"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
boto3 = "^1.40.52"
psutil = "^7.1.2"
httpx = "^0.27.0"
jinja2 = "^3.1.6"
pandas = "^2.2.0"
pyarrow = "^17.0.0"
radon = "^6.0.1"
scikit-learn = "^1.7.2"
pytesseract = "^0.3.13"
scipy = "^1.11.0"
imagehash = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.0"
pre-commit = "^4.4.0"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
