[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for qontinui-web"
authors = ["Joshua Spinak <jspinak@hotmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.2"
sqlalchemy = "^2.0.43"
uvicorn = {extras = ["standard"], version = "^0.36.0"}
pydantic = "^2.11.9"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-multipart = ">=0.0.9"
pydantic-settings = "^2.10.1"
email-validator = ">=1.1.0,<2.3"
slowapi = "^0.1.9"
aiosmtplib = "^4.0.2"
pillow = "^11.3.0"
numpy = "^2.3.3"
opencv-python = "^4.10.0"
reportlab = "^4.0.0"
stripe = "^13.0.1"
alembic = "^1.16.5"
structlog = "^25.4.0"
python-json-logger = "^3.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
redis = "^5.0.0"
aioredis = "^2.0.1"
asyncpg = "^0.30.0"
arq = "^0.26.1"
psycopg2-binary = "^2.9.11"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
boto3 = "^1.40.52"
psutil = "^7.1.2"
httpx = "^0.27.0"
jinja2 = "^3.1.6"
pandas = "^2.2.0"
pyarrow = "^17.0.0"
radon = "^6.0.1"
scikit-learn = "^1.7.2"
pytesseract = "^0.3.13"
scipy = "^1.11.0"
imagehash = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.0"
pre-commit = "^4.4.0"
aiosqlite = "^0.21.0"
# Linting tools
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.14.0"
ruff = "^0.8.0"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | __pycache__
    | alembic
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "__pycache__", "venv", ".venv", "alembic", "migrations"]
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
exclude = ["alembic", "migrations", "tests"]
# Use package mode to properly resolve module names - run with: poetry run mypy --package app
packages = ["app"]
# Disable some noisy checks for gradual adoption
warn_unreachable = false

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    ".venv",
    "alembic",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E203",  # whitespace before ':'
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
