[project]
name = "backend"
version = "0.1.0"
description = "Backend for qontinui-web"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Joshua Spinak", email = "jspinak@hotmail.com"}
]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124"
sqlalchemy = "^2.0.43"
uvicorn = {extras = ["standard"], version = "^0.38"}
pydantic = "^2.11.9"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-multipart = ">=0.0.9"
pydantic-settings = "^2.10.1"
email-validator = "^2.2"
slowapi = "^0.1.9"
aiosmtplib = "^4.0.2"
pillow = "^11.3.0"
reportlab = "^4.0.0"
stripe = "^13.0.1"
alembic = "^1.16.5"
structlog = "^25.4.0"
python-json-logger = "^3.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.21"}
redis = "^5.0.0"
aioredis = "^2.0.1"
asyncpg = "^0.30.0"
arq = "^0.26.1"
psycopg2-binary = "^2.9.11"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
boto3 = "^1.35"
psutil = "^7.1.2"
httpx = "^0.28"
jinja2 = "^3.1.6"
pandas = "^2.2.0"
pyarrow = "^17.0.0"
radon = "^6.0.1"
qontinui-schemas = {path = "../../qontinui-schemas", develop = true}
pgvector = "^0.4.2"
geoip2 = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.0"
pre-commit = "^4.4.0"
aiosqlite = "^0.21.0"
# Linting tools
black = "^24.10.0"
isort = "^7.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.14.0"
ruff = "^0.14"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"
bandit = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | __pycache__
    | alembic
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "__pycache__", "venv", ".venv", "alembic", "migrations"]
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
exclude = ["alembic", "migrations", "tests"]
# Use package mode to properly resolve module names
# Run with: MYPYPATH=stubs poetry run mypy app
packages = ["app"]
# Disable some noisy checks for gradual adoption
warn_unreachable = false
mypy_path = "stubs"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    ".venv",
    "alembic",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    # "I" - isort disabled; pre-commit uses isort which has different sorting
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E203",  # whitespace before ':'
    "B008",  # function call in default argument - allowed for FastAPI Depends()
    "B017",  # pytest.raises(Exception) - acceptable for validation tests
    "B904",  # raise from - good practice but not critical, many existing exceptions
    "B019",  # lru_cache on methods - used intentionally for secrets/config caching
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]  # Import order in tests is flexible
"app/api/deps.py" = ["E402"]  # FastAPI deps require specific import ordering
"app/api/v1/endpoints/auth_endpoints.py" = ["E402"]  # Auth endpoints need specific imports
"app/db/session.py" = ["E402"]  # Database session setup requires specific order
"app/main.py" = ["E402"]  # App initialization requires specific order
"check_database.py" = ["E402"]  # Script with path setup
"create_admin.py" = ["E402"]  # Script with path setup
"create_tables.py" = ["E402"]  # Script with path setup
"generate_test_data.py" = ["E402"]  # Script with path setup
"setup_annotations.py" = ["E402"]  # Script with path setup

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Optional ML dependencies


[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
qontinui-train = {path = "../../qontinui-train", develop = true}
